[package]
name = "docx-cleaner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docx-cleaner"
path = "src/main.rs"

[dependencies]
docx-rs = "0.4"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4.27"
once_cell = "1.21.3"
dashmap = "6.1.0"
rfd = "0.15.3"
serde_json = "1.0.140"
regex = "1.11.1"

[package.metadata.winres]
FileDescription = "DOCX Character Cleaner"
ProductName = "DOCX Cleaner"

[profile.release]
strip = true
